--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,43 @@
 aioredis==2.0.0
 asgiref==3.4.1
 async-timeout==3.0.1
+bcrypt==3.2.0
 black==21.8b0
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.6
 click==8.0.1
 ecdsa==0.17.0
 fastapi==0.68.1
+greenlet==1.1.1
 h11==0.12.0
 httptools==0.2.0
+idna==3.2
+motor==2.5.1
 mypy-extensions==0.4.3
+passlib==1.7.4
 pathspec==0.9.0
 platformdirs==2.3.0
 pyasn1==0.4.8
+pycparser==2.20
 pydantic==1.8.2
+pymongo==3.12.0
 python-dotenv==0.19.0
 python-jose==3.3.0
+python-keycloak==0.26.1
+python-multipart==0.0.5
 PyYAML==5.4.1
 redis==3.5.3
 regex==2021.8.28
+requests==2.26.0
 rsa==4.7.2
 six==1.16.0
+SQLAlchemy==1.4.23
 starlette==0.14.2
 tomli==1.2.1
 typing-extensions==3.10.0.2
+urllib3==1.26.6
 uvicorn==0.15.0
 uvloop==0.16.0
 watchgod==0.7
 websockets==9.1
-motor
-pymongo
