--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ REDIS_PASSWORD =
 REDIS_DB = 0
 
 SQLITE_URL = sqlite:///./users.db
+
+KEYCLOACK_SERVER_URL = http://localhost/auth/
+KEYCLOACK_CLIENT_ID = client-id
+KEYCLOACK_CLIENT_SECRECT_KEY = super-secret
+KEYCLOACK_REALM_NAME = localhost
