--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ ENVIRONMENT = DEV
 
 BASE_URL = http://localhost:8000
 
+MONGODB_URL = mongodb://127.0.0.1:27017/
+
 REDIS_URL = redis://localhost:6379
 REDIS_PASSWORD = 
 REDIS_DB = 0
