--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==0.7.0
 aioredis==2.0.0
 asgiref==3.4.1
 async-timeout==3.0.1
@@ -7,6 +8,7 @@ certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.6
 click==8.0.1
+dnspython==1.16.0
 ecdsa==0.17.0
 fastapi==0.68.1
 greenlet==1.1.1
@@ -22,6 +24,7 @@ pyasn1==0.4.8
 pycparser==2.20
 pydantic==1.8.2
 pymongo==3.12.0
+python-dateutil==2.8.2
 python-dotenv==0.19.0
 python-jose==3.3.0
 python-keycloak==0.26.1
@@ -41,6 +44,3 @@ uvicorn==0.15.0
 uvloop==0.16.0
 watchgod==0.7
 websockets==9.1
-motor
-pymongo
-python-dateutil==2.8.2
